GpMessages/10112855423900
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miércoles, 19 de junio de 2024 14:21:01</msg><msg code="-2147467259" type="100">﻿  File "C:\Users\nicos\Documents\ArcGIS\Packages\DAG_1s2024_L_TRABAJO_1_PARTE_2_NSR_85fdab\commondata\dag_1s2024_l_trabajo_1_parte_2_nsr.gdb\Toolbox#supervaloresmanz_NewToolbox.py", line 20
    arcpy.management.CalculateField(fcIn, field_name, expression="0", "PYTHON3", "LONG")
                                                                                       ^
﻿SyntaxError: positional argument follows keyword argument
</msg><msg code="0" type="0">Failed script 2.1 Supermercados...</msg><msg code="-2147467259" type="100">Failed to execute (supervaloresmanz).</msg><msg code="0" type="3">Failed at miércoles, 19 de junio de 2024 14:21:01 (Elapsed Time: 0,27 seconds)</msg></messages>